--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <title>Git & Github</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <h1>Johar Disom!</h1>
 </body>
 
 </html>
