--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Johar Disom!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt voluptatibus similique commodi ullam quae at!
+    </p>
 </body>
 
 </html>
