--- a/test.html
+++ b/test.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Hello World!</h1>
     <p>Testing file for Git and Github</p>
+    <section>
+        <h1>2nd Changes</h1>
+        <p></p>
+    </section>
 </body>
 
 </html>
