Update test.html file

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <p>Testing file for Git and Github</p>
     <section>
         <h1>2nd Changes</h1>
-        <p></p>
+        <p>git test branch</p>
     </section>
 </body>
 
